--- a/res/values-pl/arrays.xml
+++ b/res/values-pl/arrays.xml
@@ -309,4 +309,8 @@
         <item>Wunderground</item>
         <item>Accuweather</item>
     </string-array>
+    <string-array name="moon_phases_entries">
+        <item>Miesiąc</item>
+        <item>Rok</item>
+    </string-array>
 </resources>
