--- a/res/values-es-rES/arrays.xml
+++ b/res/values-es-rES/arrays.xml
@@ -304,4 +304,8 @@
         <!--item >MITU</item-->
         <item>Estilo MIUI</item>
     </string-array>
+    <string-array name="moon_phases_entries">
+        <item>Mes actual</item>
+        <item>Año actual</item>
+    </string-array>
 </resources>
