--- a/res/values-da/arrays.xml
+++ b/res/values-da/arrays.xml
@@ -545,4 +545,8 @@
         <!--item>MITU</item-->
         <item>MIUI video</item>
     </string-array>
+    <string-array name="moon_phases_entries">
+        <item>Denne måned</item>
+        <item>Dette år</item>
+    </string-array>
 </resources>
