--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -645,11 +645,13 @@
         <item>date_format_dmy</item>
     </string-array>   
     <string-array name="weather_provider_entries">
+        <item>MSN Weather</item>
         <item>Foreca</item>
         <item>Weather Underground</item>
         <item>Accuweather</item>
     </string-array>
     <string-array name="weather_provider_values" translatable="false">
+        <item>msn</item>
         <item>foreca</item>
         <item>wunderground</item>
         <item>accuweather</item>
