--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -522,7 +522,7 @@
         <item>MIUI видео</item>
     </string-array>
     <string-array name="moon_phases_entries">
-        <item>Текущий месяц</item>
-        <item>Текущий год</item>
+        <item>Месяц</item>
+        <item>Год</item>
     </string-array>  
 </resources>
