--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -543,7 +543,7 @@
         <item>Date</item>
         <item>City</item>
         <item>Weather description</item>
-        <item>Feelings</item>
+        <item>RealFeel</item>
         <item>Wind</item>
     </string-array>
     <string-array name="widget42_show_values" translatable="false">
@@ -555,7 +555,7 @@
         <item>w42_wind</item>
     </string-array>    
     <string-array name="main_show_entries">
-        <item>Feelings</item>
+        <item>RealFeel</item>
         <item>Wind</item>
         <item>Humidity</item>
         <item>Pressure</item>
@@ -626,16 +626,6 @@
         <item>temperature_units_c</item>
         <item>temperature_units_f</item>
     </string-array>      
-    <string-array name="animation_type_entries">
-        <item>Default</item>
-        <!--item >MITU</item-->
-        <item>MIUI video</item>
-    </string-array>
-    <string-array name="animation_type_values" translatable="false">
-        <item>animation_default</item>
-        <!--item >animation_mitu</item-->
-        <item>animation_miui</item>
-    </string-array> 
     <string-array name="date_format_entries">
         <item>@string/date_format_mdy</item>
         <item>@string/date_format_dmy</item>
