--- a/res/values-da/arrays.xml
+++ b/res/values-da/arrays.xml
@@ -541,7 +541,7 @@
         <item>"Idags vejrudsigt"</item>
     </string-array>
     <string-array name="moon_phases_entries">
-        <item>Denne måned</item>
-        <item>Dette år</item>
+        <item>Måned</item>
+        <item>År</item>
     </string-array>
 </resources>
