--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -534,7 +534,7 @@
     <string-array name="widget43_show_entries">
         <item>Date de MAJ</item>
         <item>Prochaine alarme</item>
-        <item>Niveau Batterie<</item>
+        <item>Niveau Batterie</item>
         <item>Ressenti</item>
         <item>Vent</item>
         <item>Humidité</item>
