--- a/res/values-bg/arrays.xml
+++ b/res/values-bg/arrays.xml
@@ -9,7 +9,7 @@
   		<item>13 Евро</item> 
   	</string-array>
     <string-array name="update_interval_names">
-        <item>30 минут</item>
+        <item>30 минути</item>
         <item>1 час</item>
         <item>2 часа</item>
         <item>3 часа</item>
