--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -43,7 +43,7 @@
     </string-array>
     <string-array name="widget41_show_entries">
         <item>Sıcaklık paneli</item>
-        <item>Kapsamli bilgi paneli</item>
+        <item>Kapsamlı bilgi paneli</item>
         <item>Zaman paneli</item>
     </string-array>
     <string-array name="widget41_data_entries">
